revel and shrink happeing at the same time

--- a/src/components/imageTransition/imageTransition.styles.scss
+++ b/src/components/imageTransition/imageTransition.styles.scss
@@ -20,7 +20,7 @@
         height: 100%;
         top: 0;
         right: 0;
-        background-color: aquamarine;
+        background-color: #FFF;
     }
     img {
         width: 1440px;
