--- a/src/components/slider/slider.styles.scss
+++ b/src/components/slider/slider.styles.scss
@@ -1,6 +1,11 @@
 $text: #2e293c;
 $secondary: #a09da6;
 
+.img-testimonial {
+    width: 260px;
+    height: 280px;
+}
+
 .testimonial-section {
     height: 100vh;
     display: flex;
@@ -12,6 +17,7 @@ $secondary: #a09da6;
         height: 600px;
         position: relative;
         .arrows {
+            background-color: pink;
             position: absolute;
             display: flex;
             width: 100px;
