--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -19,14 +19,17 @@
                     width: 400px;
                     margin: 0 auto;
                     color: #323232;
+                    text-align: left;
                     h1 {
                         font-weight: 500;
                         font-size: 32px;
                         margin-bottom: 24px;
+                        .hero-content-line {
+                        margin: 0;
+                        height: 44px;
+                        overflow: hidden;
                         .hero-content-line-inner {
-                            margin: 0;
-                            height: 44px;
-                            overflow: hidden;
+                        }
                         }
                     }
                     p{
@@ -59,25 +62,55 @@
                             display: flex;
                             align-items: center;
                             position: relative;
+                            &:focus {
+                                outline: none;
+                            }
                             .arrow-icon {
-
+                                position: absolute;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                background: #007fff;
+                                height: 42px;
+                                width: 42px;
+                                border-radius: 100%;
+                                left: 80px;
+                                .arrow-svg {
+                                    width: 30px;
+                                    height: 30px;
+                                }
                             }
                         }
                     }
                 }
             }
             .hero-images {
+                width: 50%;
+                height: 100vh;
+                position: relative;
                 .hero-images-inner {
                     .hero-image {
+                        position: absolute;
+                        overflow: hidden;
                         &.one {
-
+                            top: 0;
+                            right: 0;
+                            width: 45%;
+                            height: 50%;
                         }
                         &.two {
-
+                            bottom: 24px;
+                            left: 0px;
+                            width: 52%;
+                            height: 65%;
                         }
                         img{
-                           max-height: 50vh; 
-                           max-width: 50vh;
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        left: 0;
+                        bottom: 0;
+                        width: 100%;
                         }
                     }
                 }
