--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -1,4 +1,5 @@
 .hero {
+    visibility: hidden;
     padding: 0;
     margin: 0;
     height: 100vh;  
@@ -111,6 +112,16 @@
                         left: 0;
                         bottom: 0;
                         width: 100%;
+                        }
+                        .image-two {
+                            max-width: 100%;
+                            max-height: 100%; 
+                            height: 400px;
+                            width: auto;
+                            top:0;
+                            bottom:0;
+                            left:0;
+                            right:0;
                         }
                     }
                 }
